--- a/index.html
+++ b/index.html
@@ -87,11 +87,9 @@
                 <div class="skills-category">
                     <h3>Frontend Technologies</h3>
                     <ul>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
+                        <li>HTML 5</li>
+                        <li>CSS 3</li>
                         <li>JavaScript</li>
-                        <li>React.js</li>
-                        <li>Responsive Design</li>
                     </ul>
                 </div>
                 <div class="skills-category">
@@ -102,10 +100,13 @@
                     </ul>
                 </div>
                 <div class="skills-category">
-                    <h3>Tools & Others</h3>
+                    <h3>Design Software</h3>
                     <ul>
-                        <li>Visual Studio Code</li>
-                        <li>Git & GitHub</li>
+                        <li>Adobe Photoshop</li>
+                        <li>Adobe Lightroom</li>
+                        <li>Figma</li>
+                        <li>Canva</li>
+                        <li>Capcut</li>
                     </ul>
                 </div>
             </div>
@@ -205,6 +206,9 @@
                 <!--Square images (21 total) -->
                 <div class="design-item square">
                     <img src="my designs/THISS.png" alt="Design 1" />
+                </div>
+                <div class="design-item square">
+                    <img src="my designs/student's week - catching fire.png" alt="Design 1" />
                 </div>
                 <div class="design-item square">
                     <img src="my designs/stony.png.PNG" alt="Design 2" />
