--- a/index.html
+++ b/index.html
@@ -322,20 +322,38 @@
     <section id="contact">
         <div class="container">
             <h2 class="section-title">let's connect!</h2>
-            <form class="contact-form">
+            
+            <!-- Success Message (hidden by default) -->
+            <div id="success-message" class="form-message success-message">
+                <div class="message-icon">✓</div>
+                <h3>Message Sent Successfully!</h3>
+                <p>Thanks for reaching out! I'll get back to you within 24 hours.</p>
+            </div>
+
+            <!-- Error Message (hidden by default) -->
+            <div id="error-message" class="form-message error-message">
+                <div class="message-icon">✗</div>
+                <h3>Oops! Something went wrong.</h3>
+                <p>Please try again or email me directly at richelle.adarlo27@gmail.com</p>
+            </div>
+
+            <form class="contact-form" id="contact-form" action="https://formspree.io/f/mrbyowdd" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="_replyto" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
-                <button type="submit" class="submit-btn">Send Message</button>
+                <button type="submit" class="submit-btn" id="submit-btn">
+                    <span class="btn-text">Send Message</span>
+                    <span class="btn-loader">Sending...</span>
+                </button>
             </form>
         </div>
     </section>
