--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Richelle Adarlo</title>
+    <!-- Add favicon link - replace 'favicon.png' with your image file name -->
+    <link rel="icon" type="image/png" href="other-imgs/rih-favicon.png">
+    <link rel="apple-touch-icon" href="other-imgs/rih-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +16,12 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">Richelle Adarlo</a>
-                <nav>
+                <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <nav id="nav-menu">
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
@@ -32,9 +40,10 @@
 
 
     <!---- HERO SECTION ---->
+    <!-- Add scroll-animate class for animation -->
     <section id="home" class="hero">
         <div class="container">
-            <div class="hero-content">
+            <div class="hero-content scroll-animate">
                 <h1><span id="typed-text"></span><span class="cursor">|</span></h1>
                 <p class="tagline">I create stuff sometimes.</p>
                 <p class="hero-description">
@@ -51,19 +60,20 @@
     <!------ ABOUT ----->
     <section id="about">
         <div class="container">
-            <h2 class="section-title">about me</h2>
-            <div class="about-content">
+            <!-- Add scroll-animate class -->
+            <h2 class="section-title scroll-animate">about me</h2>
+            <div class="about-content scroll-animate">
                 <div class="about-text">
                     <p>I'm Richelle, a final-year <strong>computer science student</strong> at <strong>Lyceum of the Philippines University - Batangas</strong>, 
-                        specializing in data science. <br><br> Over the years, I’ve built a strong foundation in data analysis, machine learning, and 
+                        specializing in data science. <br><br> Over the years, I've built a strong foundation in data analysis, machine learning, and 
                         programming — all things that help me turn complex problems into data-driven solutions. 
-                        <br><br>Outside of all the uni work, I’ve always loved fashion and the creative side of tech, especially 
+                        <br><br>Outside of all the uni work, I've always loved fashion and the creative side of tech, especially 
                         <span style="color: #4fd1c7;">graphic design</span> and <span style="color: #4fd1c7;">web development</span>. 
                         <br><br>I make art and create official publication material for my university's social media pages - purely out of love for design and the creative process.</p>
                     <br>
                 </div>
                 <div class="about-image">
-                    <img src="moi.png" alt="Richelle Adarlo" />
+                    <img src="other-imgs/moi.png" alt="Richelle Adarlo" />
                 </div>
             </div>
         </div>
@@ -74,32 +84,27 @@
     <!---- SKILLS ---->
     <section id="skills">
         <div class="container">
-            <h2 class="section-title">skills</h2>
+            <!-- Add scroll-animate class -->
+            <h2 class="section-title scroll-animate">skills</h2>
             <div class="skills-grid">
-                <div class="skills-category">
-                    <h3>Programming Languages</h3>
-                    <ul>
-                        <li>Python</li>
-                        <li>JavaScript</li>
-                        <li>C++</li>
-                    </ul>
-                </div>
-                <div class="skills-category">
-                    <h3>Frontend Technologies</h3>
+                <div class="skills-category scroll-animate">
+                    <h3>Frontend</h3>
                     <ul>
                         <li>HTML 5</li>
                         <li>CSS 3</li>
                         <li>JavaScript</li>
+                        <li>React.js</li>
                     </ul>
                 </div>
-                <div class="skills-category">
-                    <h3>Backend & Cloud</h3>
+                <div class="skills-category scroll-animate">
+                    <h3>Backend + Cloud</h3>
                     <ul>
                         <li>Node.js</li>
                         <li>RESTful APIs</li>
+                        <li>MySQL</li>
                     </ul>
                 </div>
-                <div class="skills-category">
+                <div class="skills-category scroll-animate">
                     <h3>Design Software</h3>
                     <ul>
                         <li>Adobe Photoshop</li>
@@ -107,6 +112,15 @@
                         <li>Figma</li>
                         <li>Canva</li>
                         <li>Capcut</li>
+                    </ul>
+                </div>
+                <div class="skills-category scroll-animate">
+                    <h3>Data Analysis + Visualization</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Excel</li>
+                        <li>Power BI</li>
+                        <li>Tableau</li>
                     </ul>
                 </div>
             </div>
@@ -119,40 +133,42 @@
     <!---- PROJECTS ---->
     <section id="projects">
         <div class="container">
-            <h2 class="section-title">projects</h2>
+            <!-- Add scroll-animate class to each project card -->
+            <h2 class="section-title scroll-animate">projects</h2>
             <div class="projects-grid">
 
                 <!--Signa'Pal-->
-                <div class="project-card">
+                <div class="project-card scroll-animate">
                     <div class="project-image">
-                        <img src="signapal.png" alt="Signa'Pal Preview" />
+                        <img src="project-thumbnails/signapal.png" alt="Signa'Pal Preview" />
                     </div>
                     <h3>Signa'Pal</h3>
                     <p>A web-based learning platform used to learn ASL, implemented using the LSTM (Long Short-Term Memory) Algorithm.</p>
                     <div class="project-tech">OpenCV, MediaPipe, TensorFlow, Node.js, HTML, CSS, JavaScript</div>
                     <div class="project-links">
-                        <a href="https://signapal.site/" target="_blank">👋 Signa'Pal</a>
+                        <a href="https://signapal.com" target="_blank">👋 Signa'Pal Website</a><br>
+                        <a href="https://signapal.site/" target="_blank">Version 1</a>
                     </div>
                 </div>
 
                 <!--ADARLO APPAREL-->
-                <div class="project-card">
+                <div class="project-card scroll-animate">
                     <div class="project-image">
-                        <img src="adarloapparel.png" alt="ADARLO APPAREL Preview" />
+                        <img src="project-thumbnails/adarloapparel.png" alt="ADARLO APPAREL Preview" />
                     </div>
                     <h3>ADARLO APPAREL: A Responsive E-Commerce Website</h3>
                     <p>This is the very first website that I built during my first year of university (frontend only), where I used a combination of HTML, CSS, and JavaScript to build.</p>
                     <div class="project-tech">HTML, CSS, JavaScript</div>
                     <div class="project-links">
-                        <a href="https://richelleadarlo.github.io/Adarlo-Apparel-/" target="_blank">Adarlo Apparel</a>
+                        <a href="https://richelleadarlo.github.io/Adarlo-Apparel-/" target="_blank">Adarlo Apparel</a><br>
                         <a href="https://github.com/richelleadarlo/Adarlo-Apparel-.git" target="_blank">📱 GitHub Repo</a>
                     </div>
                 </div>
 
                 <!--NLU - CompassionBot-->
-                <div class="project-card">
+                <div class="project-card scroll-animate">
                     <div class="project-image">
-                        <img src="compassion.png" alt="Signa'Pal Preview" />
+                        <img src="project-thumbnails/compassion.png" alt="Signa'Pal Preview" />
                     </div>
                     <h3>CompassionBot - Grief Support Companion</h3>
                     <p>A compassionate chatbot with UI designed to provide emotional support for those experiencing grief.</p>
@@ -163,9 +179,9 @@
                 </div>
 
                 <!--Image Processing - SneakerHoroscope-->
-                <div class="project-card">
+                <div class="project-card scroll-animate">
                     <div class="project-image">
-                        <img src="sneakerhoro.png" alt="Signa'Pal Preview" />
+                        <img src="project-thumbnails/sneakerhoro.png" alt="Signa'Pal Preview" />
                     </div>
                     <h3>Sneaker Horoscope</h3>
                     <p>A Python-based image classification project built using pre-trained MobileNetV2 that analyzes uploaded shoe photos 
@@ -177,9 +193,9 @@
                 </div>
 
                 <!--SenaTalk-->
-                <div class="project-card">
+                <div class="project-card scroll-animate">
                     <div class="project-image">
-                        <img src="senatalk.png" alt="Signa'Pal Preview" />
+                        <img src="project-thumbnails/senatalk.png" alt="Signa'Pal Preview" />
                     </div>
                     <h3>SenaTalk - Philippine Senator Chatbot</h3>
                     <p>SenaTalk is a chatbot that enhances the level of democratic engagement in the Philippines using Natural Language Understanding 
@@ -200,83 +216,87 @@
     <!---- MY DESIGNS ---->
     <section id="designs">
         <div class="container">
-            <h2 class="section-title">my designs</h2>
-            <p class="litol-text">Here's a small compilation of some of my most recent designs</p>
+            <!-- Add scroll-animate class -->
+            <h2 class="section-title scroll-animate">my designs</h2>
+            <p class="litol-text scroll-animate">Here's a small compilation of some of my most recent designs</p>
             <div class="designs-grid">
                 <!--Square images (21 total) -->
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/THISS.png" alt="Design 1" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/student's week - catching fire.png" alt="Design 1" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/stony.png.PNG" alt="Design 2" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/LGG FAQs post.PNG" alt="Design 3" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/NC III Passers.png.PNG" alt="Design 4" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/Copy of Lover - Taylor Swift Photo Booth.png.PNG" alt="Design 5" />
                 </div>
                 <!--Landscape/PowerPoint size image 1 --> 
-                <div class="design-item landscape">
+                <div class="design-item landscape scroll-animate">
                     <img src="my designs/TCW FINAL - Globalization of Technology PPT.PNG" alt="Design 6" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/final().png.PNG" alt="Design 7" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/partner orgs - special thanks.PNG" alt="Design 8" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/JUDGE 2 w frame.png.PNG" alt="Design 9" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/Copy of LPU-BCS Podcast.PNG" alt="Design 10" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/LGG - Congrats.PNG" alt="Design 11" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/first .png" alt="Design 12" />
                 </div>
                  <!--Landscape/PowerPoint size image 2 -->
-                <div class="design-item landscape">
+                <div class="design-item landscape scroll-animate">
                     <img src="my designs/Digital Museum - ADARLO, RICHELLE GRACE Q.png" alt="Design 13" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/LGG Announcement Post - Emails.png" alt="Design 14" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/Michaella Leynes.png" alt="Design 15" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/CONGRATS - Delos Reyes.png" alt="Design 16" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/World Teacher_s Day _24 (LyCANS).PNG" alt="Design 17" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/Quadruplets Folder Cover.PNG" alt="Design 18" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/Batangas City Fiesta.PNG" alt="Design 19" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/Bonifacio Day - Nov 30, 2024.png.PNG" alt="Design 20" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/KAAGAPAY Your Voice, Our Action.PNG" alt="Design 21" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/ComEx Computer Literacy Program 2025.PNG" alt="Design 22" />
                 </div>
-                <div class="design-item square">
+                <div class="design-item square scroll-animate">
                     <img src="my designs/att.J8Irl_RFv51X0aBaUuqi5q0Hk5NMlpoR4_9W-IS6-7g.JPG" alt="Design 23" />
+                </div>
+                <div class="design-item square scroll-animate">
+                    <img src="my designs/pistakasan - final main poster.png" alt="Design 24" />
                 </div>
             </div>
         </div>
@@ -288,8 +308,9 @@
     <!---- EDUCATION ---->
     <section id="education">
         <div class="container">
-            <h2 class="section-title">education</h2>
-            <table class="education-table">
+            <!-- Add scroll-animate class -->
+            <h2 class="section-title scroll-animate">education</h2>
+            <table class="education-table scroll-animate">
                 <thead>
                     <tr>
                         <th>Degree</th>
@@ -321,21 +342,40 @@
     <!-----KEEP IN TOUCH / CONTACT------>
     <section id="contact">
         <div class="container">
-            <h2 class="section-title">let's connect!</h2>
-            <form class="contact-form">
+            <!-- Add scroll-animate class -->
+            <h2 class="section-title scroll-animate">let's connect!</h2>
+            
+            <!-- Success Message (hidden by default) -->
+            <div id="success-message" class="form-message success-message">
+                <div class="message-icon">✓</div>
+                <h3>Message Sent Successfully!</h3>
+                <p>Thanks for reaching out! I'll get back to you within 24 hours.</p>
+            </div>
+
+            <!-- Error Message (hidden by default) -->
+            <div id="error-message" class="form-message error-message">
+                <div class="message-icon">✗</div>
+                <h3>Oops! Something went wrong.</h3>
+                <p>Please try again or email me directly at richelle.adarlo27@gmail.com</p>
+            </div>
+
+            <form class="contact-form scroll-animate" id="contact-form" action="https://formspree.io/f/mrbyowdd" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="_replyto" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
-                <button type="submit" class="submit-btn">Send Message</button>
+                <button type="submit" class="submit-btn" id="submit-btn">
+                    <span class="btn-text">Send Message</span>
+                    <span class="btn-loader">Sending...</span>
+                </button>
             </form>
         </div>
     </section>
@@ -347,7 +387,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="copyright">
-                    © 2025 Richelle Adarlo. All rights reserved.
+                    Built and designed by Richelle Adarlo. All rights reserved. ©
                 </div>
                 <div class="social-links">
                     <!--<a href="richelle.adarlo27@gmail.com">📧 Email</a>-->
